--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ajv": "^6.10.0",
     "axios": "^0.18.0",
     "epic-spinners": "^1.0.4",
     "moment": "^2.24.0",
     "vue": "^2.5.21",
     "vue-image-crop-upload": "^2.5.0",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.3.0",
+    "vuetify": "^1.5.9",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -22,7 +23,7 @@
     "@mdi/font": "^3.3.92",
     "@vue/cli-plugin-babel": "^3.3.0",
     "@vue/cli-plugin-eslint": "^3.3.0",
-    "@vue/cli-service": "^3.3.0",
+    "@vue/cli-service": "^3.5.3",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
