--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.24.0",
     "vue": "^2.5.21",
     "vue-image-crop-upload": "^2.5.0",
+    "vue-observe-visibility": "^0.4.3",
     "vue-router": "^3.0.1",
     "vuetify": "^1.5.9",
     "vuex": "^3.0.1"
