--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "vue-image-crop-upload": "^2.5.0",
     "vue-observe-visibility": "^0.4.3",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.5.14",
+    "vuetify": "^2.0.0-beta.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -29,10 +29,12 @@
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
     "material-design-icons-iconfont": "^4.0.4",
+    "sass": "^1.17.4",
+    "sass-loader": "^7.1.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
-    "vue-cli-plugin-vuetify": "^0.4.6",
+    "vue-cli-plugin-vuetify": "git+https://github.com/vuetifyjs/vue-cli-plugin-vuetify.git#dev",
     "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.2.0"
+    "vuetify-loader": "^1.2.2"
   }
 }
