--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "vue-image-crop-upload": "^2.5.0",
     "vue-observe-visibility": "^0.4.3",
     "vue-router": "^3.0.1",
-    "vuetify": "^2.0.0-beta.2",
+    "vuetify": "^2.1.5",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
