--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "epic-spinners": "^1.1.0",
     "moment": "^2.29.1",
     "v-clipboard": "^2.2.3",
+    "vee-validate": "^3.4.5",
     "vue": "^2.6.12",
     "vue-image-crop-upload": "^2.5.0",
     "vue-observe-visibility": "^0.4.6",
