--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/js": "^5.9.55",
     "ajv": "^6.12.0",
     "axios": "^0.21.1",
     "epic-spinners": "^1.1.0",
