--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/eslint-parser": "^7.19.1",
     "@mdi/js": "^5.9.55",
     "ajv": "^6.12.6",
     "axios": "^0.26.1",
@@ -25,12 +26,12 @@
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.1.0",
     "@mdi/font": "^5.9.55",
-    "@vue/cli-plugin-babel": "^4.5.8",
-    "@vue/cli-plugin-eslint": "^4.2.3",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
     "@vue/cli-service": "^5.0.8",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint": "^8.26.0",
+    "eslint-plugin-vue": "^9.6.0",
     "material-design-icons-iconfont": "^6.1.0",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
